--- a/client/src/app/shared/components/app-bar/app-bar.component.html
+++ b/client/src/app/shared/components/app-bar/app-bar.component.html
@@ -3,13 +3,17 @@
 
     <span>PolyTickets</span>
 
-    <button mat-button>
+    <button mat-button (click)="goToMainPage()">
       Available events
     </button>
 
 
     <button mat-button>
       Create a event
+    </button>
+
+    <button mat-button (click)="goToVodService()">
+      VOD service
     </button>
 
     <span class="spacer-header"></span>
