Add the CORS to all MicroServices

--- a/client/src/app/feature/tickets/ticket-card/ticket-card.component.html
+++ b/client/src/app/feature/tickets/ticket-card/ticket-card.component.html
@@ -1,10 +1,10 @@
 
 
-<div class="ticket-card">
+<div class="ticket-card" *ngIf="ticketV != null">
 
 
   <div id="title-ticket-card">
-    <h2>{{ticket}}</h2>
+    <h2>{{ticketV.name_event}}</h2>
   </div>
 
   <div id="booking-ticket-card">
