Implementation de la gestion de la file d'attente pour les tickets

--- a/client/src/app/shared/components/app-bar/app-bar.component.html
+++ b/client/src/app/shared/components/app-bar/app-bar.component.html
@@ -12,6 +12,10 @@
       Create a event
     </button>
 
+    <button mat-button (click)="goToUploadVideoPage()">
+      Add a new VOD video
+    </button>
+
     <button mat-button (click)="goToVodService()">
       VOD service
     </button>
