--- a/client/src/app/feature/tickets/tickets-list/tickets-list.component.html
+++ b/client/src/app/feature/tickets/tickets-list/tickets-list.component.html
@@ -9,7 +9,7 @@
 
 
 
-    <app-ticket-card *ngFor="let ticket of tickets" [ticketV]="ticket"></app-ticket-card>
+    <app-ticket-card *ngFor="let event of events" [event]="event"></app-ticket-card>
 
 
 
