Update front with add new event and optimize event-manager

--- a/client/src/app/shared/components/app-bar/app-bar.component.html
+++ b/client/src/app/shared/components/app-bar/app-bar.component.html
@@ -8,7 +8,7 @@
     </button>
 
 
-    <button mat-button>
+    <button mat-button (click)="goToEventManager()">
       Create a event
     </button>
 
